# yuque-sdk

./: .gitignore  MANIFEST.in  OPTIMIZATION_REPORT.md  README.md  build.sh  config.example.yaml  coverage.json  pyproject.toml
docs/: install.md
openspec/: project.md
openspec/specs/api-client/: spec.md
openspec/specs/testing/: spec.md
skills/: CLAUDE_SKILLS_GUIDE.md  README.md
skills/yuque/: SKILL.md  executor.py  mcp-config.json  package.json
skills/yuque-mcp/: SKILL.md
skills/yuque-sdk/: SKILL.md
src/yuque/: __init__.py  client.py
src/yuque/api/: __init__.py  base.py  doc.py  group.py  repo.py  search.py  user.py
src/yuque/cache/: __init__.py  backend.py  keys.py  manager.py  memory.py  redis_backend.py  stats.py
src/yuque/exceptions/: __init__.py
src/yuque/mcp/: __init__.py  adapters.py  cache.py  cli.py  formatters.py  server.py
src/yuque/mcp/tools/: __init__.py  doc.py  group.py  repo.py  search.py  user.py
src/yuque/models/: __init__.py
src/yuque/utils/: __init__.py  cache_invalidation.py
tests/: conftest.py  test_cache_integration.py  test_client.py  test_mcp_integration.py
tests/api/: test_base_api.py  test_doc_api.py  test_group_api.py  test_repo_api.py  test_search_api.py  test_user_api.py
tests/cache/: test_backend.py  test_keys.py  test_manager.py  test_memory.py  test_redis_backend.py  test_stats.py
tests/mcp/: test_cli.py  test_formatters.py  test_server.py
tests/mcp/tools/: test_doc.py  test_group.py  test_repo.py  test_search.py  test_user.py
tests/skills/: __init__.py  test_executor.py
tests/utils/: test_cache_invalidation.py
