[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yuque-sdk"
version = "0.1.1"
description = "A Python client library for Yuque OpenAPI"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["yuque", "api", "client", "documentation", "collaboration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "types-requests>=2.31.0",
    "pyyaml>=6.0.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
]
mcp = [
    # MCP Python SDK for building MCP servers
    "mcp>=0.9.0",
    # FastAPI for HTTP transport (optional)
    "fastapi>=0.100.0",
    # Uvicorn ASGI server for HTTP transport (optional)
    "uvicorn>=0.22.0",
]
redis = [
    "redis>=5.0.0",
]

[project.scripts]
yuque-mcp = "yuque.mcp.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/yuque-python"
Repository = "https://github.com/yourusername/yuque-python"
Issues = "https://github.com/yourusername/yuque-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/yuque"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--cov=src/yuque",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=90",
]

[tool.coverage.run]
branch = true
source = ["src/yuque"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
fail_under = 90
exclude_also = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
